<resources>
    <string name="app_name">Stacks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_stock_purchase">Stock Purchase</string>
    <string name="symbol">Symbol</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="fee">Fee</string>
    <string name="purchase_history">Purchase History</string>
    <string name="title_activity_net_worth">NetWorthActivity</string>
    <string name="netWorth">Net Worth</string>
    <string name="money_format">£%,.2f</string>
    <string name="threeDecimalPlaces_format">£%,.3f</string>
    <string name="percentage_format">%.2f%%</string>
    <string name="percentage_fi_format">%,.4f%% fi</string>
    <string name="percentage_string_format">%s%%</string>
    <string name="days_format">%d days</string>
    <string name="dashboard">Dashboard</string>
    <string name="appwidget_text">↑ %.2f%%</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="funds">Funds</string>
    <string name="fund_header">Watchlist</string>
    <string name="control_panel">Control Panel</string>
    <string name="yearly_expenses">Yearly Expenses</string>
    <string name="safe_withdrawal_rate">Safe Withdrawal Rate</string>
    <string name="funds_watchlist">Funds Watchlist</string>
    <string name="stock_exchange_prefix">Stock Exchange Prefix</string>
    <string name="financialIndependenceNumber">Financial Independence Number</string>
    <string name="title_activity_dividend">Dividend</string>
    <string name="amount">Amount</string>
    <string name="amount_label">Amount</string>
    <string name="date_label">Date</string>
    <string name="portfolio_value">Portfolio value</string>
    <string name="investment_gain">Investment gain</string>
    <string name="dividend_yield">Dividend yield</string>
    <string name="days_without_investment">Days without investment</string>
    <string name="percentage_growth">Percentage growth</string>
    <string name="percentage_dividend_yield">Percentage dividend yield</string>
    <string name="percentage_fi">Percentage FI</string>
    <string name="cantFindStock_format">Unable to find \'%s\' current price</string>
    <string name="investmentSum_format">£%,.2f invested</string>
</resources>
