<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.nyakeh.stacks.StockPurchaseActivity">

    <LinearLayout
        android:id="@+id/newStockPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newStockPurchase_investmentSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:gravity="center"
            tools:text="£5632.28 invested"/>

        <EditText
            android:id="@+id/newStockPurchase_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/symbol"/>

        <EditText
            android:id="@+id/newStockPurchase_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/newStockPurchase_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/newStockPurchase_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fee"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/stock_purchase_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/auxiliary_margin"
            android:layout_marginRight="@dimen/auxiliary_margin"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stockPurchase_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newStockPurchase"
        android:background="@color/red"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</RelativeLayout>